--- a/reparatie.html
+++ b/reparatie.html
@@ -17,7 +17,7 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="winkel.html">Winkel</a></li>
-                        <li class="current"><a href="reparatie.html">Reparatie</a></li>
+                        <li><a href="reparatie.html" class="current">Reparatie</a></li>
                     </ul>
                 </nav>
                 <div class="link-rep-pagina">
@@ -127,7 +127,7 @@
                         <ul>
                             <li><a href="index.html">Home</a></li>
                             <li><a href="winkel.html">Winkel</a></li>
-                            <li class="current"><a href="reparatie.html">Reparatie</a></li>
+                            <li><a href="reparatie.html">Reparatie</a></li>
                         </ul>
                     </nav>
                 </div>
