--- a/winkel.html
+++ b/winkel.html
@@ -18,7 +18,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li class="current"><a href="winkel.html">Winkel</a></li>
+                    <li><a href="winkel.html" class="current">Winkel</a></li>
                     <li><a href="reparatie.html">Reparatie</a></li>
                 </ul>
             </nav>
@@ -102,7 +102,7 @@
                 <nav>
                     <ul>
                         <li><a href="index.html">Home</a></li>
-                        <li class="current"><a href="winkel.html">Winkel</a></li>
+                        <li><a href="winkel.html">Winkel</a></li>
                         <li><a href="reparatie.html">Reparatie</a></li>
                     </ul>
                 </nav>
