--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <h3 href="index.html">FIETSEN<span>MAKER</span></h3>
             <nav>
                 <ul>
-                    <li class="current"><a href="index.html">Home</a></li>
+                    <li><a href="index.html" class="current">Home</a></li>
                     <li><a href="winkel.html">Winkel</a></li>
                     <li><a href="reparatie.html">Reparatie</a></li>
                 </ul>
@@ -82,7 +82,7 @@
             <div class="nav-footer">
                 <nav>
                     <ul>
-                        <li class="current"><a href="index.html">Home</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="winkel.html">Winkel</a></li>
                         <li><a href="reparatie.html">Reparatie</a></li>
                     </ul>
