--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p>Elke werkdag open van 08:00 tot 18:00</p>
         </div>
         <div class="header-width">
-            <h3 href="index.html">FIETSEN<span>MAKER</span></h3>
+            <a href="index.html"><h3>FIETSEN<span>MAKER</span></h3></a>
             <nav>
                 <ul>
                     <li><a href="index.html" class="current">Home</a></li>
@@ -35,43 +35,48 @@
             <div class="klant">
                 <i class="fa-solid fa-users"></i>
                 <h5>KLANTGERICHT</h5>
-                <p>Klanten staan bij ons op #1!</p>
+                <p>Klanten staan bij ons op <span>#1!</span></p>
             </div>
-            <div class="bezorging">
+
+            <div class="row">
                 <i class="fa-solid fa-truck"></i>
                 <h5>HAAL EN BRENGSERVICE</h5>
                 <p>Geen zin om naar ons toe <br>te komen? Maakt niet uit!</p>
             </div>
-            <div class="prijs">
+
+            <div class="row">
                 <i class="fa-solid fa-money-bill-wave"></i>
                 <h5>BETAALBAAR</h5>
                 <p>Onze fietsen zijn <br>betaalbaar, en van kwaliteit!</p>
             </div>
-            <div class="tijdsopgaven">
+
+            <div class="row">
                 <i class="fa-solid fa-person-biking"></i>
                 <h5>SNEL WEER OP WEG</h5>
-                <p>Binnen no time kan jij weer <br>op weg!</p>
+                <p>Binnen <span>no time</span> kan jij weer <br>op weg!</p>
             </div>
         </div>
-        <div class="uitleg">
-            <div class="tekst">
-                <h5>EEN FIETS VOOR IEDEREEN!</h5>
-                <p>Aenean laoreet felis ac enim malesuada feugiat. Nam est augue,
-                    condimentum eu vestibulum id, volutpat nec ante. Nam ultricies diam
-                    ipsum, a dictum turpis facilisis in. Nam ultrices et massa et bibendum. Nulla
-                    facilisi. In interdum sem id arcu maximus hendrerit. Integer nec lorem
-                    mollis, efficitur lorem et, eleifend quam. Pellentesque scelerisque erat
-                    lectus, vitae commodo risus iaculis varius. Vivamus dui tortor, egestas non
-                    odio eget, pretium mattis odio. <br><br>Aenean a dolor risus. Nunc id condimentum sem, quis malesuada nisl.
-                    Etiam vestibulum neque ac orci egestas semper et vitae diam. Maecenas
-                    lobortis sed tellus ac pellentesque. Maecenas scelerisque ex erat, ac
-                    lobortis nunc maximus in. Praesent auctor felis semper elit imperdiet
-                    vestibulum. Proin volutpat ante a nisi imperdiet ullamcorper. Sed quis
-                    porttitor justo. Ut aliquet eros ac suscipit malesuada.</p>
-            </div>
-            <div class="image">
-                <img src="./Fietsenmaker/Images/home-afbeelding.jpg">
-            </div>
+        <div class="container-overlay">
+            <div class="uitleg">
+                <div class="tekst">
+                    <h5>EEN FIETS VOOR IEDEREEN!</h5>
+                    <p>Aenean laoreet felis ac enim malesuada feugiat. Nam est augue,
+                        condimentum eu vestibulum id, volutpat nec ante. Nam ultricies diam
+                        ipsum, a dictum turpis facilisis in. Nam ultrices et massa et bibendum. Nulla
+                        facilisi. In interdum sem id arcu maximus hendrerit. Integer nec lorem
+                        mollis, efficitur lorem et, eleifend quam. Pellentesque scelerisque erat
+                        lectus, vitae commodo risus iaculis varius. Vivamus dui tortor, egestas non
+                        odio eget, pretium mattis odio. <br><br>Aenean a dolor risus. Nunc id condimentum sem, quis malesuada nisl.
+                        Etiam vestibulum neque ac orci egestas semper et vitae diam. Maecenas
+                        lobortis sed tellus ac pellentesque. Maecenas scelerisque ex erat, ac
+                        lobortis nunc maximus in. Praesent auctor felis semper elit imperdiet
+                        vestibulum. Proin volutpat ante a nisi imperdiet ullamcorper. Sed quis
+                        porttitor justo. Ut aliquet eros ac suscipit malesuada.</p>
+                </div>
+                <div class="image">
+                    <img src="./Fietsenmaker/Images/home-afbeelding.jpg">
+                </div>
+            </div> 
         </div>
     </main>
     <footer>
