--- a/reparatie.html
+++ b/reparatie.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Fietsenmaker - Reparatie</title>
-        <link rel="stylesheet" href="style.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <script src="https://kit.fontawesome.com/da854b2a40.js" crossorigin="anonymous"></script>    
-    </head>
-    <body>
-        <header>
-            <div class="openingstijden">
-                <p>Elke werkdag open van 08:00 tot 18:00</p>
+
+<head>
+    <title>Fietsenmaker - Reparatie</title>
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/da854b2a40.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <header>
+        <div class="openingstijden">
+            <p>Elke werkdag open van 08:00 tot 18:00</p>
+        </div>
+        <div class="header-width">
+            <a href="index.html"><h3>FIETSEN<span>MAKER</span></h3></a>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="winkel.html">Winkel</a></li>
+                    <li><a href="reparatie.html" class="current">Reparatie</a></li>
+                </ul>
+            </nav>
+            <div class="link-rep-pagina">
+                <button href="reparatie.html">Maak een afspraak</button>
             </div>
-            <div class="header-width">
-                <h3 href="index.html">FIETSEN<span>MAKER</span></h3>
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="winkel.html">Winkel</a></li>
-                        <li><a href="reparatie.html" class="current">Reparatie</a></li>
-                    </ul>
-                </nav>
-                <div class="link-rep-pagina">
-                    <button href="reparatie.html">Maak een afspraak</button>
-                </div>
-            </div>
-            <div class="hero-container home-image">
-                <h3 aria-hidden="true">PLAN UW REPARATIE</h3>
-            </div>
-        </header>
-        
+        </div>
+        <div class="hero-container home-image">
+            <h3 aria-hidden="true">PLAN UW REPARATIE</h3>
+        </div>
+    </header>
+
+    <div class="container-padding">
         <div class="contact-box">
             <div class="contact-container">
                 <form id="contactform" class="form" action="">
@@ -61,77 +64,80 @@
                     <br>
                     <label for="reparatie" class="reparatielabel">Selecteer een datum voor reparatie</label>
                     <div class="form-control datumveld">
-                    <input type="date" id="datum" name="datum">
-                    <small></small>
+                        <input type="date" id="datum" name="datum">
+                        <small></small>
                     </div>
                     <textarea type="text" class="form-control" placeholder="Opmerkingen" id="opmerking"
                         name="opmerking"></textarea>
                     <div class="send-button">
-                        <button class="send" type="submit" value="submit">Versturen</button>
+                        <input class="send" type="submit" value="Verzenden">
                     </div>
                 </form>
+            </div>
+            <div class="algemene-info">
+                <h5>CONTACTGEGEVENS</h5>
+                <p>
+                    Teststraat 45<br>
+                    1234 AB, testplaats<br><br>
+    
+                    T: 010 - 123 456 78<br>
+                    E: info@fietsenmaker.nl
+                </p>
+                <h5>OPENINGSTIJDEN</h5>
+                <div class="openingstijden">
+                    <table>
+                        <tbody>
+                            <tr>
+                                <td class="dag">Maandag</td>
+                                <td class="tijd">8:00 - 17:00</td>
+                            </tr>
+                            <tr>
+                                <td class="dag">Dinsdag</td>
+                                <td class="tijd">8:00 - 17:00</td>
+                            </tr>
+                            <tr>
+                                <td class="dag">Woensdag</td>
+                                <td class="tijd">8:00 - 17:00</td>
+                            </tr>
+                            <tr>
+                                <td class="dag">Donderdag</td>
+                                <td class="tijd">8:00 - 17:00</td>
+                            </tr>
+                            <tr>
+                                <td class="dag">Vrijdag</td>
+                                <td class="tijd">8:00 - 17:00</td>
+                            </tr>
+                            <tr>
+                                <td class="dag">Zaterdag</td>
+                                <td class="tijd">Gesloten</td>
+                            </tr>
+                            <tr>
+                                <td class="dag">Zondag</td>
+                                <td class="tijd">Gesloten</td>
+                            </tr>
+                        </tbody>
+                    </table>
                 </div>
-                <div class="algemene-info">
-                    <h5>CONTACTGEGEVENS</h5>
-                    <p>
-                        Teststraat 45<br>
-                        1234 AB, testplaats<br><br>
+            </div>
+        </div>
+    </div>
 
-                        T: 010 - 123 456 78<br>
-                        E: info@fietsenmaker.nl
-                    </p>
-                    <h5>OPENINGSTIJDEN</h5>
-                    <div class="openingstijden">
-                        <table>
-                            <tbody>
-                                <tr>
-                                    <td class="dag">Maandag</td>
-                                    <td class="tijd">8:00 - 17:00</td>
-                                </tr>
-                                <tr>
-                                    <td class="dag">Dinsdag</td>
-                                    <td class="tijd">8:00 - 17:00</td>
-                                </tr>
-                                <tr>
-                                    <td class="dag">Woensdag</td>
-                                    <td class="tijd">8:00 - 17:00</td>
-                                </tr>
-                                <tr>
-                                    <td class="dag">Donderdag</td>
-                                    <td class="tijd">8:00 - 17:00</td>
-                                </tr>
-                                <tr>
-                                    <td class="dag">Vrijdag</td>
-                                    <td class="tijd">8:00 - 17:00</td>
-                                </tr>
-                                <tr>
-                                    <td class="dag">Zaterdag</td>
-                                    <td class="tijd">Gesloten</td>
-                                </tr>
-                                <tr>
-                                    <td class="dag">Zondag</td>
-                                    <td class="tijd">Gesloten</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-                </div>
+    <footer>
+        <div class="footer-width">
+            <div class="copyright">
+                <p>Copyright - Fietsenmaker</p>
             </div>
-        <footer>
-            <div class="footer-width">
-                <div class="copyright">
-                    <p>Copyright - Fietsenmaker</p>
-                </div>
-                <div class="nav-footer">
-                    <nav>
-                        <ul>
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="winkel.html">Winkel</a></li>
-                            <li><a href="reparatie.html">Reparatie</a></li>
-                        </ul>
-                    </nav>
-                </div>
+            <div class="nav-footer">
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="winkel.html">Winkel</a></li>
+                        <li><a href="reparatie.html">Reparatie</a></li>
+                    </ul>
+                </nav>
             </div>
-        </footer>
-    </body>
+        </div>
+    </footer>
+</body>
+
 </html>
