commit fietsenmaker klaar tot voor hamburger menu

--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <p>Elke werkdag open van 08:00 tot 18:00</p>
         </div>
         <div class="header-width">
-            <a href="index.html"><h3>FIETSEN<span>MAKER</span></h3></a>
+            <a href="index.html">
+                <h3>FIETSEN<span>MAKER</span></h3>
+            </a>
             <nav>
                 <ul>
                     <li><a href="index.html" class="current">Home</a></li>
@@ -66,7 +68,8 @@
                         facilisi. In interdum sem id arcu maximus hendrerit. Integer nec lorem
                         mollis, efficitur lorem et, eleifend quam. Pellentesque scelerisque erat
                         lectus, vitae commodo risus iaculis varius. Vivamus dui tortor, egestas non
-                        odio eget, pretium mattis odio. <br><br>Aenean a dolor risus. Nunc id condimentum sem, quis malesuada nisl.
+                        odio eget, pretium mattis odio. <br><br>Aenean a dolor risus. Nunc id condimentum sem, quis
+                        malesuada nisl.
                         Etiam vestibulum neque ac orci egestas semper et vitae diam. Maecenas
                         lobortis sed tellus ac pellentesque. Maecenas scelerisque ex erat, ac
                         lobortis nunc maximus in. Praesent auctor felis semper elit imperdiet
@@ -76,7 +79,7 @@
                 <div class="image">
                     <img src="./Fietsenmaker/Images/home-afbeelding.jpg">
                 </div>
-            </div> 
+            </div>
         </div>
     </main>
     <footer>
