1ste commit hamburger menu
Nog goed zetten naar eigen branch

--- a/index.html
+++ b/index.html
@@ -24,7 +24,17 @@
                     <li><a href="reparatie.html">Reparatie</a></li>
                 </ul>
             </nav>
-            <div class="link-rep-pagina">
+            <button onclick="ChangeIcon" class="hamburger">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+            <nav class="nav-tab">
+                <ul>
+                    <li><a href="index.html" class="current">Home</a></li>
+                    <li><a href="winkel.html">Winkel</a></li>
+                    <li><a href="reparatie.html">Reparatie</a></li>
+                </ul>
+            </nav>
+            <div class="link-rep-pagina nav-tab">
                 <a href="reparatie.html"><button>Maak een afspraak</button></a>
             </div>
         </div>
@@ -98,6 +108,7 @@
             </div>
         </div>
     </footer>
+    <script src="app.js"></script>
 </body>
 
 </html>
