--- a/reparatie.html
+++ b/reparatie.html
@@ -21,6 +21,15 @@
                     <li><a href="winkel.html">Winkel</a></li>
                     <li><a href="reparatie.html" class="current">Reparatie</a></li>
                 </ul>
+            </nav><button onclick="ChangeIcon" class="hamburger">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="winkel.html">Winkel</a></li>
+                    <li><a href="reparatie.html" class="current">Reparatie</a></li>
+                </ul>
             </nav>
             <div class="link-rep-pagina">
                 <button href="reparatie.html">Maak een afspraak</button>
@@ -138,6 +147,7 @@
             </div>
         </div>
     </footer>
+    <script src="app.js"></script>
 </body>
 
 </html>
