--- a/winkel.html
+++ b/winkel.html
@@ -22,6 +22,16 @@
                     <li><a href="reparatie.html">Reparatie</a></li>
                 </ul>
             </nav>
+            <button onclick="ChangeIcon" class="hamburger">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+            <nav class="navbar">
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="winkel.html" class="current">Winkel</a></li>
+                    <li><a href="reparatie.html">Reparatie</a></li>
+                </ul>
+            </nav>
             <div class="link-rep-pagina">
                 <button href="reparatie.html">Maak een afspraak</button>
             </div>
@@ -112,6 +122,7 @@
             </div>
         </div>
     </footer>
+    <script src="app.js"></script>
 </body>
 
 </html>
