--- a/index.html
+++ b/index.html
@@ -17,24 +17,32 @@
             <a href="index.html">
                 <h3>FIETSEN<span>MAKER</span></h3>
             </a>
-            <nav>
+            <nav class="web-nav">
                 <ul>
                     <li><a href="index.html" class="current">Home</a></li>
                     <li><a href="winkel.html">Winkel</a></li>
                     <li><a href="reparatie.html">Reparatie</a></li>
                 </ul>
             </nav>
-            <button onclick="ChangeIcon" class="hamburger">
-                <i class="fa-solid fa-bars"></i>
-            </button>
-            <nav class="nav-tab">
-                <ul>
-                    <li><a href="index.html" class="current">Home</a></li>
-                    <li><a href="winkel.html">Winkel</a></li>
-                    <li><a href="reparatie.html">Reparatie</a></li>
-                </ul>
-            </nav>
-            <div class="link-rep-pagina nav-tab">
+            <div id="menu" class="hamburger">
+                <div id="button">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+                <nav id="nav-tab">
+                    <span id="close-button">
+                        <i class="fa-solid fa-x"></i>
+                    </span>
+                    <ul>
+                        <li class="home-link"><a href="index.html">Home</a></li>
+                        <li class="winkel-link"><a href="winkel.html">Winkel</a></li>
+                        <li class="reparatie-link"><a href="reparatie.html">Reparatie</a></li>
+                    </ul>
+                </nav>
+                <div class="link-rep-pagina">
+                    <a href="reparatie.html"><button>Maak een afspraak</button></a>
+                </div>
+            </div>
+            <div class="link-rep-pagina">
                 <a href="reparatie.html"><button>Maak een afspraak</button></a>
             </div>
         </div>
