--- a/winkel.html
+++ b/winkel.html
@@ -22,16 +22,24 @@
                     <li><a href="reparatie.html">Reparatie</a></li>
                 </ul>
             </nav>
-            <button onclick="ChangeIcon" class="hamburger">
-                <i class="fa-solid fa-bars"></i>
-            </button>
-            <nav class="navbar">
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="winkel.html" class="current">Winkel</a></li>
-                    <li><a href="reparatie.html">Reparatie</a></li>
-                </ul>
-            </nav>
+            <div id="menu" class="hamburger">
+                <div id="button">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+                <nav id="nav-tab">
+                    <span>
+                        <i class="fa-solid fa-x"></i>
+                    </span>
+                    <ul>
+                        <li class="home-link"><a href="index.html">Home</a></li>
+                        <li class="winkel-link"><a href="winkel.html">Winkel</a></li>
+                        <li class="reparatie-link"><a href="reparatie.html">Reparatie</a></li>
+                    </ul>
+                </nav>
+                <div class="link-rep-pagina">
+                    <a href="reparatie.html"><button>Maak een afspraak</button></a>
+                </div>
+            </div>
             <div class="link-rep-pagina">
                 <button href="reparatie.html">Maak een afspraak</button>
             </div>
