3rd commit validatie werkend

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <li class="reparatie-link"><a href="reparatie.html">Reparatie</a></li>
                     </ul>
                 </nav>
-                <div class="link-rep-pagina">
+                <div class="menu-link-rep-pagina">
                     <a href="reparatie.html"><button>Maak een afspraak</button></a>
                 </div>
             </div>
