--- a/reparatie.html
+++ b/reparatie.html
@@ -17,7 +17,7 @@
             <a href="index.html">
                 <h3>FIETSEN<span>MAKER</span></h3>
             </a>
-            <nav>
+            <nav class="web-nav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="winkel.html">Winkel</a></li>
@@ -29,7 +29,7 @@
                     <i class="fa-solid fa-bars"></i>
                 </div>
                 <nav id="nav-tab">
-                    <span>
+                    <span id="close-button">
                         <i class="fa-solid fa-x"></i>
                     </span>
                     <ul>
