--- a/winkel.html
+++ b/winkel.html
@@ -15,7 +15,7 @@
         </div>
         <div class="header-width">
             <a href="index.html"><h3>FIETSEN<span>MAKER</span></h3></a>
-            <nav>
+            <nav class="web-nav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="winkel.html" class="current">Winkel</a></li>
@@ -27,7 +27,7 @@
                     <i class="fa-solid fa-bars"></i>
                 </div>
                 <nav id="nav-tab">
-                    <span>
+                    <span id="close-button">
                         <i class="fa-solid fa-x"></i>
                     </span>
                     <ul>
