--- a/index.html
+++ b/index.html
@@ -24,6 +24,21 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
+            <div id="menu" class="hamburger">
+                <div id="button">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+                <nav id="nav-tab">
+                    <span id="close-button">
+                        <i class="fa-solid fa-x"></i>
+                    </span>
+                    <ul>
+                        <li class="home-link"><a href="index.html">Home</a></li>
+                        <li class="winkel-link"><a href="winkel.html">Winkel</a></li>
+                        <li class="reparatie-link"><a href="reparatie.html">Reparatie</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
     <main>
