3de commit javascript

--- a/contact.html
+++ b/contact.html
@@ -17,13 +17,28 @@
             <div class="logo">
                 <a href="index.html"><img src="/Logo/logo_large.png" alt="home-logo" class="logo"></a>
             </div>
-            <nav>
+            <nav class="web-nav">
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="over-ons.html">Over ons</a></li>
                     <li><a href="contact.html" class="current">Contact</a></li>
                 </ul>
             </nav>
+            <div id="menu" class="hamburger">
+                <div id="button">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+                <nav id="nav-tab">
+                    <span id="close-button">
+                        <i class="fa-solid fa-x"></i>
+                    </span>
+                    <ul>
+                        <li class="home-link"><a href="index.html">Home</a></li>
+                        <li class="winkel-link"><a href="winkel.html">Winkel</a></li>
+                        <li class="reparatie-link"><a href="reparatie.html">Reparatie</a></li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </header>
     <main>
