--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="logo">
                 <a href="index.html"><img src="/Logo/logo_large.png" alt="home-logo" class="logo"></a>
             </div>
-            <nav>
+            <nav class="web-nav">
                 <ul>
                     <li><a href="index.html" class="current">Home</a></li>
                     <li><a href="over-ons.html">Over ons</a></li>
