--- a/contact.html
+++ b/contact.html
@@ -96,7 +96,7 @@
                     </tbody>
                 </table>
             </div>
-            <div class="contactformulier">
+            <div id="contactformulier">
                 <form method="post">
                     <div class="name">
                         <label for="name">Naam</label>
