final commit javascript

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Bakkerij - Contact</title>
+    <script src="https://kit.fontawesome.com/2d56d8ddfe.js" crossorigin="anonymous"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap');
     </style>
@@ -34,8 +35,8 @@
                     </span>
                     <ul>
                         <li class="home-link"><a href="index.html">Home</a></li>
-                        <li class="winkel-link"><a href="winkel.html">Winkel</a></li>
-                        <li class="reparatie-link"><a href="reparatie.html">Reparatie</a></li>
+                        <li class="over-ons-link"><a href="over-ons.html">Over Ons</a></li>
+                        <li class="contact-link"><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -138,5 +139,5 @@
         </div>
     </footer>
 </body>
-
+<script src="app.js"></script>
 </html>
