--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Bakkerij - Home</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Lato&family=Roboto&display=swap');
-    </style>
+    <script src="https://kit.fontawesome.com/da854b2a40.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -34,8 +32,8 @@
                     </span>
                     <ul>
                         <li class="home-link"><a href="index.html">Home</a></li>
-                        <li class="winkel-link"><a href="winkel.html">Winkel</a></li>
-                        <li class="reparatie-link"><a href="reparatie.html">Reparatie</a></li>
+                        <li class="over-ons-link"><a href="over-ons.html">Over Ons</a></li>
+                        <li class="contact-link"><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -116,5 +114,5 @@
         </div>
     </footer>
 </body>
-
+<script src="app.js"></script>
 </html>
