--- a/over-ons.html
+++ b/over-ons.html
@@ -36,8 +36,8 @@
                     </span>
                     <ul>
                         <li class="home-link"><a href="index.html">Home</a></li>
-                        <li class="winkel-link"><a href="winkel.html">Winkel</a></li>
-                        <li class="reparatie-link"><a href="reparatie.html">Reparatie</a></li>
+                        <li class="over-ons-link"><a href="over-ons.html">Over Ons</a></li>
+                        <li class="contact-link"><a href="contact.html">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -137,5 +137,5 @@
         </div>
     </footer>
 </body>
-
+<script src="app.js"></script>
 </html>
